syntax = "proto3";

package tasks;

// Define a generic task request that can handle multiple types of tasks
message TaskRequest {
    oneof task {
        CapitalizeTextRequest capitalize = 1;
        ReverseTextRequest reverse = 2;
        MultiplyIntegerRequest multiply = 3;
    }
}

// Define a generic task response that can handle multiple types of task responses
message TaskResponse {
    oneof response {
        CapitalizeTextResponse capitalize = 1;
        ReverseTextResponse reverse = 2;
        MultiplyIntegerResponse multiply = 3;
    }
}

// Request and response definitions for capitalizing text
message CapitalizeTextRequest {
    string input = 1;
}

message CapitalizeTextResponse {
    string result = 1;
}

// Request and response definitions for reversing text
message ReverseTextRequest {
    string input = 1;
}

message ReverseTextResponse {
    string result = 1;
}

// Request and response definitions for multiplying integers
message MultiplyIntegerRequest {
    int32 a = 1;
    int32 b = 2;
}

message MultiplyIntegerResponse {
    int32 result = 1;
}